# EnclaveVerifier

./: .gitignore  .gitmodules  README.md
enclave-bin/interpreter/app/: .gitignore  Cargo.toml
enclave-bin/interpreter/app/src/: main.rs
enclave-bin/interpreter/enclave/: Cargo.toml  Enclave.edl  Makefile
enclave-bin/interpreter/enclave/src/: lib.rs
enclave-bin/type_checker/: Makefile
enclave-bin/type_checker/app/: Cargo.toml
enclave-bin/type_checker/app/src/: main.rs
enclave-bin/type_checker/enclave/: .gitignore  Cargo.toml  Enclave.edl  Makefile  Xargo.toml
enclave-bin/type_checker/enclave/src/: lib.rs
rs-sources/: .gitignore  Cargo.toml
rs-sources/src/: lib.rs
rs-sources/src/ast/: aexp.rs  bexp.rs  cmd.rs  data_type.rs  exp.rs  func_general.rs  mod.rs  primit_serialize.rs  states.rs  var_general.rs
rs-sources/src/interpreter/: aexp.rs  bexp.rs  cmd.rs  exp.rs  mod.rs  states.rs
rs-sources/src/type_checker/: type_checker.rs
rs-sources/test_scripts/: verif_type_checker.sh
