[package]
name = "app"
version = "1.0.0"
authors = ["Hunter Coffman", "Haofan Zheng"]
build = "build.rs"

[dependencies]
enclave_verifier = { path = "../../../rs-sources" }

sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../rs-libs/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../../../rs-libs/incubator-teaclave-sgx-sdk/sgx_urts" }

